# learn-rust

./: Cargo.toml  README.md
src/: main.rs  rust_by_example.rs  rust_by_practice.rs
src/rust-by-example/01-hello-world/: 3_formatting.rs
src/rust-by-example/02-primitives/: 2_tuples.rs  3_arrays_and_slices.rs
src/rust-by-practice/3-variables/: 0_variables_2_binding_and_mutability.rs  0_variables_5_shadowing.rs  0_variables_6_shadowing.rs  0_variables_9_destructuring_assignments.rs
src/rust-by-practice/4-basic-types/: 1_numbers_8_floating_point.rs  1_numbers_9_range.rs  4_functions_1.rs  4_functions_3.rs  4_functions_4_diverging.rs
src/rust_by_example/: _01_hello_world.rs  _02_primitives.rs  _03_custom_types.rs  _04_variable_bindings.rs  _05_types.rs  _06_conversions.rs  _07_expressions.rs  _08_flow_of_control.rs  _09_functions.rs  _10_modules.rs  _14_generics.rs  _15_scoping_rules.rs  _16_traits.rs  _17_macro_rules.rs  _18_error_handling.rs  _19_std_library_types.rs  _20_std_misc.rs  _21_testing.rs  _22_unsafe_operations.rs
src/rust_by_example/_01_hello_world/: _0_hello_world.rs  _1_comments.rs  _2_1_debug_1.rs  _2_1_debug_2.rs  _2_2_display_1.rs  _2_2_display_1_activity.rs  _2_2_display_2.rs  _2_2_display_2_activity.rs  _3_formatting.rs
src/rust_by_example/_02_primitives/: _0_primitives.rs  _2_tuples.rs  _3_arrays_and_slices.rs
src/rust_by_example/_03_custom_types/: _1_structures.rs  _2_enums_0.rs  _2_enums_1_use.rs  _2_enums_3_linked_list.rs
src/rust_by_example/_04_variable_bindings/: _0_variable_bindings.rs  _1_mutability.rs  _2_scope_and_shadowing_1.rs  _2_scope_and_shadowing_2.rs  _3_declare_first.rs  _4_freezing.rs
src/rust_by_example/_05_types/: _1_casting.rs  _4_aliasing.rs
src/rust_by_example/_06_conversions/: _1_from_and_into.rs  _2_tryfrom_and_tryinto.rs  _3_to_and_from_strings.rs
src/rust_by_example/_07_expressions/: _0_expressions.rs
src/rust_by_example/_08_flow_of_control/: _2_loop_1_nesting_and_labels.rs  _3_while.rs  _4_for_and_range.rs  _5_match.rs  _5_match_1_destructuring.rs  _5_match_2_guards.rs  _5_match_3_binding.rs  _6_if_let.rs  _7_let_else.rs  _8_while_let.rs
src/rust_by_example/_09_functions/: _0_functions.rs  _1_methods.rs  _2_closures.rs  _2_closures_1_capturing.rs  _2_closures_3_type_anonymity.rs  _2_closures_4_input_functions.rs  _2_closures_5_as_output_parameters.rs  _2_closures_6_examples_in_std_1_iterator_any.rs  _2_closures_6_examples_in_std_2_searching_through_iterators.rs  _3_higher_order_functions.rs  _4_diverging_functions.rs
src/rust_by_example/_10_modules/: _1_visibility.rs  _2_struct_visibility.rs  _3_the_use_declaration.rs  _4_super_and_self.rs
src/rust_by_example/_14_generics/: _0_generics.rs  _1_functions.rs  _2_implementation.rs  _3_traits.rs  _4_bounds.rs  _4_bounds_1_empty_bounds.rs  _5_multiple_bounds.rs  _6_where_clauses.rs  _7_new_type_idiom.rs  _8_associated_items_1_the_problem.rs  _8_associated_items_2_associated_types.rs  _9_phantom_type_parameters.rs  _9_phantom_type_parameters_1_unit_clarification.rs
src/rust_by_example/_15_scoping_rules/: _1_raii.rs  _2_ownership_and_moves.rs  _2_ownership_and_moves_1_mutability.rs  _2_ownership_and_moves_2_partial_moves.rs  _3_borrowing.rs  _3_borrowing_1_mutability.rs  _3_borrowing_2_aliasing.rs  _3_borrowing_3_the_ref_pattern.rs  _4_lifetimes_1_explicit_annotation.rs  _4_lifetimes_2_functions.rs  _4_lifetimes_3_methods.rs  _4_lifetimes_4_structs.rs  _4_lifetimes_5_traits.rs  _4_lifetimes_6_bounds.rs  _4_lifetimes_7_coercion.rs  _4_lifetimes_8_static_reference_lifetime.rs  _4_lifetimes_8_static_trait_bound.rs  _4_lifetimes_9_elision.rs
src/rust_by_example/_16_traits/: _0_traits.rs  _1_derive.rs  _2_returning_traits_with_dyn.rs  _3_operator_overloading.rs  _4_drop.rs  _5_iterators.rs  _6_impl_trait_1_as_an_argument_type.rs  _6_impl_trait_2_as_a_return_type.rs  _6_impl_trait_3_as_a_return_type.rs  _6_impl_trait_4_as_a_return_type.rs  _7_clone.rs  _8_supertraits.rs  _9_disambiguating_overlapping_traits.rs
src/rust_by_example/_17_macro_rules/: _0_macro_rules.rs  _1_syntax_1_designators.rs  _1_syntax_2_overload.rs  _1_syntax_3_repeat.rs  _3_dsl.rs  _4_variadic_interfaces.rs
src/rust_by_example/_18_error_handling/: _1_panic.rs  _2_abort_and_unwind_1.rs  _2_abort_and_unwind_2.rs  _3_option_and_unwrap.rs  _3_option_and_unwrap_1_unpacking_options_with_questionmark.rs  _3_option_and_unwrap_2_combinators_map.rs  _3_option_and_unwrap_3_combinators_and_then.rs  _3_option_and_unwrap_4_unpacking_options_and_defaults.rs  _4_result.rs  _4_result_1_map_for_result_1.rs  _4_result_1_map_for_result_2.rs  _4_result_2_aliases_for_result.rs  _4_result_3_early_returns.rs  _4_result_4_introducing_questionmark_1.rs  _4_result_4_introducing_questionmark_2_try_macro.rs  _4_result_main.rs  _5_multiple_error_types.rs  _5_multiple_error_types_1_pulling_results_out_of_options_1.rs  _5_multiple_error_types_1_pulling_results_out_of_options_2.rs  _5_multiple_error_types_2_defining_an_error_type.rs  _5_multiple_error_types_3_boxing_errors.rs  _5_multiple_error_types_4_other_uses_of_questionmark.rs  _5_multiple_error_types_5_wrapping_errors.rs  _6_iterating_over_results.rs
src/rust_by_example/_19_std_library_types/: _1_box_stack_and_heap.rs  _2_vectors.rs  _3_strings_2_literals_and_escapes.rs  _3_strings_3_literals_and_escapes.rs  _3_strings_4_literals_and_escapes.rs  _5_result.rs  _5_result_1_questionmark.rs  _6_panic.rs  _7_hashmap.rs  _7_hashmap_1_alternate_custom_key_types.rs  _7_hashmap_2_hashset.rs  _8_rc.rs  _9_arc.rs
src/rust_by_example/_20_std_misc/: _1_threads.rs  _1_threads_1_testcase_mapreduce.rs  _2_channels.rs  _3_path.rs  _4_file_io_1_open.rs  (+9 more)
src/rust_by_practice/: _03_variables.rs  _04_basic_types.rs  _05_ownership_and_borrowing.rs  _06_compound_types.rs  _07_flow_control.rs  _08_pattern_match.rs  _09_method_and_associated_function.rs  _10_generics_and_traits.rs  _11_collection_types.rs  _12_type_conversion.rs  _13_result_and_panic.rs  _16_formatted_output.rs  _17_lifetime.rs  _18_functional_programming.rs  _19_newtype_and_dst.rs  _31_fighting_with_compiler.rs
(+292 files in other folders)
