[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



###################
# rust-by-example #
###################

# 1. Hello World

    [[example]]
    name = "rbe_1_0_hello_world"
    path = "src/rust-by-example/01-hello-world/0_hello_world.rs"

    [[example]]
    name = "rbe_1_1_comments"
    path = "src/rust-by-example/01-hello-world/1_comments.rs"

    [[example]]
    name = "rbe_1_2_debug_1"
    path = "src/rust-by-example/01-hello-world/2_1_debug_1.rs"

    [[example]]
    name = "rbe_1_2_debug_2"
    path = "src/rust-by-example/01-hello-world/2_1_debug_2.rs"

    [[example]]
    name = "rbe_1_2_display_1"
    path = "src/rust-by-example/01-hello-world/2_2_display_1.rs"

    [[example]]
    name = "rbe_1_2_display_1_activity"
    path = "src/rust-by-example/01-hello-world/2_2_display_1_activity.rs"

    [[example]]
    name = "rbe_1_2_display_2"
    path = "src/rust-by-example/01-hello-world/2_2_display_2.rs"

    [[example]]
    name = "rbe_1_2_display_2_activity"
    path = "src/rust-by-example/01-hello-world/2_2_display_2_activity.rs"

    [[example]]
    name = "rbe_1_3_formatting"
    path = "src/rust-by-example/01-hello-world/3_formatting.rs"

# 2. Primitives

    [[example]]
    name = "rbe_2_0_primitives"
    path = "src/rust-by-example/02-primitives/0_primitives.rs"

    [[example]]
    name = "rbe_2_1_literals_and_operators"
    path = "src/rust-by-example/02-primitives/1_literals_and_operators.rs"

    [[example]]
    name = "rbe_2_2_tuples"
    path = "src/rust-by-example/02-primitives/2_tuples.rs"

    [[example]]
    name = "rbe_2_3_arrays_and_slices"
    path = "src/rust-by-example/02-primitives/3_arrays_and_slices.rs"



####################
# rust-by-practice #
####################

# 3. Variables

    [[example]]
    name = "rbp_3_variables_1_binding_and_mutability"
    path = "src/rust-by-practice/3-variables/0_variables_1_binding_and_mutability.rs"

    [[example]]
    name = "rbp_3_variables_2_binding_and_mutability"
    path = "src/rust-by-practice/3-variables/0_variables_2_binding_and_mutability.rs"

    [[example]]
    name = "rbp_3_variables_3_scope"
    path = "src/rust-by-practice/3-variables/0_variables_3_scope.rs"

    [[example]]
    name = "rbp_3_variables_4_scope"
    path = "src/rust-by-practice/3-variables/0_variables_4_scope.rs"

    [[example]]
    name = "rbp_3_variables_5_shadowing"
    path = "src/rust-by-practice/3-variables/0_variables_5_shadowing.rs"

    [[example]]
    name = "rbp_3_variables_6_shadowing"
    path = "src/rust-by-practice/3-variables/0_variables_6_shadowing.rs"

    [[example]]
    name = "rbp_3_variables_7_unused_variables"
    path = "src/rust-by-practice/3-variables/0_variables_7_unused_variables.rs"

    [[example]]
    name = "rbp_3_variables_8_destructuring"
    path = "src/rust-by-practice/3-variables/0_variables_8_destructuring.rs"

    [[example]]
    name = "rbp_3_variables_9_destructuring_assignments"
    path = "src/rust-by-practice/3-variables/0_variables_9_destructuring_assignments.rs"
