[package]
name = "learn-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



###################
# rust-by-example #
###################

# 1. Hello World

    [[example]]
    name = "rbe_1_0_hello_world"
    path = "src/rust-by-example/01-hello-world/0_hello_world.rs"

    [[example]]
    name = "rbe_1_1_comments"
    path = "src/rust-by-example/01-hello-world/1_comments.rs"

    [[example]]
    name = "rbe_1_2_debug_1"
    path = "src/rust-by-example/01-hello-world/2_1_debug_1.rs"

    [[example]]
    name = "rbe_1_2_debug_2"
    path = "src/rust-by-example/01-hello-world/2_1_debug_2.rs"

    [[example]]
    name = "rbe_1_2_display_1"
    path = "src/rust-by-example/01-hello-world/2_2_display_1.rs"

    [[example]]
    name = "rbe_1_2_display_1_activity"
    path = "src/rust-by-example/01-hello-world/2_2_display_1_activity.rs"

    [[example]]
    name = "rbe_1_2_display_2"
    path = "src/rust-by-example/01-hello-world/2_2_display_2.rs"

    [[example]]
    name = "rbe_1_2_display_2_activity"
    path = "src/rust-by-example/01-hello-world/2_2_display_2_activity.rs"

    [[example]]
    name = "rbe_1_3_formatting"
    path = "src/rust-by-example/01-hello-world/3_formatting.rs"

# 2. Primitives

    [[example]]
    name = "rbe_2_0_primitives"
    path = "src/rust-by-example/02-primitives/0_primitives.rs"

    [[example]]
    name = "rbe_2_1_literals_and_operators"
    path = "src/rust-by-example/02-primitives/1_literals_and_operators.rs"

    [[example]]
    name = "rbe_2_2_tuples"
    path = "src/rust-by-example/02-primitives/2_tuples.rs"

    [[example]]
    name = "rbe_2_3_arrays_and_slices"
    path = "src/rust-by-example/02-primitives/3_arrays_and_slices.rs"

# 3. Custom Types

    [[example]]
    name = "rbe_3_1_structures"
    path = "src/rust-by-example/3-custom-types/1_structures.rs"

    [[example]]
    name = "rbe_3_2_enums"
    path = "src/rust-by-example/3-custom-types/2_enums_0.rs"

    [[example]]
    name = "rbe_3_2_enums_1_use"
    path = "src/rust-by-example/3-custom-types/2_enums_1_use.rs"

    [[example]]
    name = "rbe_3_2_enums_2_c_like"
    path = "src/rust-by-example/3-custom-types/2_enums_2_c_like.rs"

    [[example]]
    name = "rbe_3_2_enums_3_linked_list"
    path = "src/rust-by-example/3-custom-types/2_enums_3_linked_list.rs"

    [[example]]
    name = "rbe_3_3_constants"
    path = "src/rust-by-example/3-custom-types/3_constants.rs"



####################
# rust-by-practice #
####################

# 3. Variables

    [[example]]
    name = "rbp_3_variables_1_binding_and_mutability"
    path = "src/rust-by-practice/3-variables/0_variables_1_binding_and_mutability.rs"

    [[example]]
    name = "rbp_3_variables_2_binding_and_mutability"
    path = "src/rust-by-practice/3-variables/0_variables_2_binding_and_mutability.rs"

    [[example]]
    name = "rbp_3_variables_3_scope"
    path = "src/rust-by-practice/3-variables/0_variables_3_scope.rs"

    [[example]]
    name = "rbp_3_variables_4_scope"
    path = "src/rust-by-practice/3-variables/0_variables_4_scope.rs"

    [[example]]
    name = "rbp_3_variables_5_shadowing"
    path = "src/rust-by-practice/3-variables/0_variables_5_shadowing.rs"

    [[example]]
    name = "rbp_3_variables_6_shadowing"
    path = "src/rust-by-practice/3-variables/0_variables_6_shadowing.rs"

    [[example]]
    name = "rbp_3_variables_7_unused_variables"
    path = "src/rust-by-practice/3-variables/0_variables_7_unused_variables.rs"

    [[example]]
    name = "rbp_3_variables_8_destructuring"
    path = "src/rust-by-practice/3-variables/0_variables_8_destructuring.rs"

    [[example]]
    name = "rbp_3_variables_9_destructuring_assignments"
    path = "src/rust-by-practice/3-variables/0_variables_9_destructuring_assignments.rs"

# 4. Basic Types

    [[example]]
    name = "rbp_4_basic_types_1_numbers_1_integer"
    path = "src/rust-by-practice/4-basic-types/1_numbers_1_integer.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_2_integer"
    path = "src/rust-by-practice/4-basic-types/1_numbers_2_integer.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_3_integer"
    path = "src/rust-by-practice/4-basic-types/1_numbers_3_integer.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_4_integer"
    path = "src/rust-by-practice/4-basic-types/1_numbers_4_integer.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_5_integer"
    path = "src/rust-by-practice/4-basic-types/1_numbers_5_integer.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_6_integer"
    path = "src/rust-by-practice/4-basic-types/1_numbers_6_integer.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_7_floating_point"
    path = "src/rust-by-practice/4-basic-types/1_numbers_7_floating_point.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_8_floating_point"
    path = "src/rust-by-practice/4-basic-types/1_numbers_8_floating_point.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_9_range"
    path = "src/rust-by-practice/4-basic-types/1_numbers_9_range.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_10_range"
    path = "src/rust-by-practice/4-basic-types/1_numbers_10_range.rs"

    [[example]]
    name = "rbp_4_basic_types_1_numbers_11_computations"
    path = "src/rust-by-practice/4-basic-types/1_numbers_11_computations.rs"

    [[example]]
    name = "rbp_4_basic_types_2_cbu_1_char"
    path = "src/rust-by-practice/4-basic-types/2_cbu_1_char.rs"

    [[example]]
    name = "rbp_4_basic_types_2_cbu_2_char"
    path = "src/rust-by-practice/4-basic-types/2_cbu_2_char.rs"

    [[example]]
    name = "rbp_4_basic_types_2_cbu_3_bool"
    path = "src/rust-by-practice/4-basic-types/2_cbu_3_bool.rs"

    [[example]]
    name = "rbp_4_basic_types_2_cbu_4_bool"
    path = "src/rust-by-practice/4-basic-types/2_cbu_4_bool.rs"

    [[example]]
    name = "rbp_4_basic_types_2_cbu_5_unit"
    path = "src/rust-by-practice/4-basic-types/2_cbu_5_unit.rs"

    [[example]]
    name = "rbp_4_basic_types_2_cbu_6_unit"
    path = "src/rust-by-practice/4-basic-types/2_cbu_6_unit.rs"

    [[example]]
    name = "rbp_4_basic_types_3_statements_expressions_0"
    path = "src/rust-by-practice/4-basic-types/3_statements_expressions_0.rs"

    [[example]]
    name = "rbp_4_basic_types_3_statements_expressions_1"
    path = "src/rust-by-practice/4-basic-types/3_statements_expressions_1.rs"

    [[example]]
    name = "rbp_4_basic_types_3_statements_expressions_2"
    path = "src/rust-by-practice/4-basic-types/3_statements_expressions_2.rs"

    [[example]]
    name = "rbp_4_basic_types_3_statements_expressions_3"
    path = "src/rust-by-practice/4-basic-types/3_statements_expressions_3.rs"

    [[example]]
    name = "rbp_4_basic_types_4_functions_1"
    path = "src/rust-by-practice/4-basic-types/4_functions_1.rs"

    [[example]]
    name = "rbp_4_basic_types_4_functions_2"
    path = "src/rust-by-practice/4-basic-types/4_functions_2.rs"

    [[example]]
    name = "rbp_4_basic_types_4_functions_3"
    path = "src/rust-by-practice/4-basic-types/4_functions_3.rs"

    [[example]]
    name = "rbp_4_basic_types_4_functions_4_diverging"
    path = "src/rust-by-practice/4-basic-types/4_functions_4_diverging.rs"

    [[example]]
    name = "rbp_4_basic_types_4_functions_5_diverging"
    path = "src/rust-by-practice/4-basic-types/4_functions_5_diverging.rs"
